feat: add new file structure and start search form

--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,17 @@
     <title>Document</title>
 </head>
 <body>
-    sdsds
+    <div class="wrapper">
+        
+    
+    <section class="search-form">
+        <form action="POST">
+            <label for="search" class="search-form__label">Enter inventory number, guid or bims id</label>
+            <input type="text" class="search-form__textbox" id="search" name="search" placeholder="Type">
+            <button class="search-form__btn">Search</button>
+        </form>
+    </section>
+</div>
     <script src="./index.js"></script>
 </body>
 </html>
