--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,54 @@
                 </div>
             </div>
             
-            <div class="filter__info"></div>
+            <div class="filter__info device-info">
+                <div class="device-info__item">
+                    <span class="device-info__name">Тип оборудования:</span>
+                    <span class="device-info__content" id="type">Весы</span>
+                </div>
+                <div class="device-info__item">
+                    <span class="device-info__name">Статус:</span>
+                    <span class="device-info__content" id="status">Готов к работе</span>
+                </div>
+                <div class="device-info__item">
+                    <span class="device-info__name">Изготовитель:</span>
+                    <span class="device-info__content" id="manufacturer">Ohaus</span>
+                </div>
+                <div class="device-info__item"> 
+                    <span class="device-info__name">Модель:</span>
+                    <span class="device-info__content" id="model">AX-123</span></div>
+                <div class="device-info__item">
+                    <span class="device-info__name">Ответственное подразделение (ремонт):</span>
+                    <span class="device-info__content" id="responsible-гтше">Группа обслуживания лабораторного оборудования</span></div>
+                <div class="device-info__item">
+                    <span class="device-info__name">Эксплуатирующее подразделение:</span>
+                    <span class="device-info__content" id="operating-unit">Химико-аналитическая лаборатория 2.0</span>
+                </div>
+                <div class="device-info__item">
+                    <span class="device-info__name">МОЛ:</span>
+                    <span class="device-info__content" id="mol">Иванов Иван Иванович</span>
+                </div>
+                <div class="device-info__item">
+                    <span class="device-info__name">Территория:</span>
+                    <span class="device-info__content" id="domain">г. Санкт-Петербург (Нойдорф)</span>
+                </div>
+                <div class="device-info__item">
+                    <span class="device-info__name">Серийный номер:</span>
+                    <span class="device-info__content" id="serial-number">B715976163</span>
+                </div>
+                <div class="device-info__item">
+                    <span class="device-info__name">GUID:</span>
+                    <a href="#" class="device-info__content_link" id="guid">508b2a71-662e-4983-ae0c-3cb0c1cd21c5</a>
+                </div>
+                <div class="device-info__item">
+                    <span class="device-info__name">Bims ID:</span>
+                    <a href="#" class="device-info__content_link" id="bimsid">49db8db1-585f-4b9e-bbf0-8a59698edc8b</a>
+                </div>
+                <div class="device-info__item">
+                    <span class="device-info__name">Tam:</span>
+                    <a href="#" class="device-info__content_link" id="tam">А-001234</a>
+                </div>   
+            </div>
             <div class="filter__form"></div>
         </div>
 </div>
