feat: add report__table html

--- a/src/index.html
+++ b/src/index.html
@@ -102,7 +102,127 @@
     <div class="grid__item">
         <div class="report">
             <h3 class="report__header">Calibration report</h3>
-           
+            <table class="report__table">
+                <tr>
+                    <th class="report__th">Data</th>
+                    <th class="report__th">Used buffer solutions</th>
+                    <th class="report__th">Slope, %<br>Norm 95-105</th>
+                    <th class="report__th">Offset, mV<br>Norm ±(0-20)</th>
+                    <th class="report__th">User</th>
+                </tr>
+                <tr>
+                    <td class="report__td">
+                        <div class="report__date">04.10.19</div>
+                        <div class="report__time">10:23</div>
+                        </td>
+                    <td class="report__td">
+                        В1: № 2000460789536: pH 1.09
+                        <br>
+                        В2: № 2000460789536: pH 2.00
+                        <br>
+                        В3: № 2000460789536: pH 4.01
+                        <br>
+                        В4: № 2000460789536: pH 7.00
+                        <br>
+                        В5: № 2000460789536: pH 9.21
+                    </th>
+                    <td class="report__td">
+                        98.7
+                        <div class="report__icon_ok"></div>
+                    </td>
+                    <td class="report__td">
+                        -0.3
+                        <div class="report__icon_ok"></div>
+                    </td>       
+                    <td class="report__td">
+                        Иванов Генадий Петрович
+                    </td>
+                </tr>
+                <tr>
+                    <td class="report__td">
+                        <div class="report__date">04.10.19</div>
+                        <div class="report__time">10:23</div>
+                        </td>
+                    <td class="report__td">
+                        В1: № 2000460789536: pH 1.09
+                        <br>
+                        В2: № 2000460789536: pH 2.00
+                        <br>
+                        В3: № 2000460789536: pH 4.01
+                        <br>
+                        В4: № 2000460789536: pH 7.00
+                        <br>
+                        В5: № 2000460789536: pH 9.21
+                    </th>
+                    <td class="report__td">
+                        98.7
+                        <div class="report__icon_ok"></div>
+                    </td>
+                    <td class="report__td">
+                        -0.3
+                        <div class="report__icon_ok"></div>
+                    </td>       
+                    <td class="report__td">
+                        Петров Иван Генадьевич
+                    </td>
+                </tr>
+                <tr>
+                    <td class="report__td">
+                        <div class="report__date">04.10.19</div>
+                        <div class="report__time">10:23</div>
+                        </td>
+                    <td class="report__td">
+                        В1: № 2000460789536: pH 1.09
+                        <br>
+                        В2: № 2000460789536: pH 2.00
+                        <br>
+                        В3: № 2000460789536: pH 4.01
+                        <br>
+                        В4: № 2000460789536: pH 7.00
+                        <br>
+                        В5: № 2000460789536: pH 9.21
+                    </th>
+                    <td class="report__td">
+                        98.7
+                        <div class="report__icon_ok"></div>
+                    </td>
+                    <td class="report__td">
+                        -0.3
+                        <div class="report__icon_ok"></div>
+                    </td>       
+                    <td class="report__td">
+                        Петров Иван Генадьевич
+                    </td>
+                </tr>
+                <tr>
+                    <td class="report__td">
+                        <div class="report__date">04.10.19</div>
+                        <div class="report__time">10:23</div>
+                        </td>
+                    <td class="report__td">
+                        В1: № 2000460789536: pH 1.09
+                        <br>
+                        В2: № 2000460789536: pH 2.00
+                        <br>
+                        В3: № 2000460789536: pH 4.01
+                        <br>
+                        В4: № 2000460789536: pH 7.00
+                        <br>
+                        В5: № 2000460789536: pH 9.21
+                    </th>
+                    <td class="report__td">
+                        90.1
+                        <div class="report__icon_bad"></div>
+                    </td>
+                    <td class="report__td">
+                        -0.5
+                        <div class="report__icon_ok"></div>
+                    </td>       
+                    <td class="report__td">
+                        Генадьев Иван Петрович
+                    </td>
+                </tr>
+            </table>
         </div>   
     </div>         
 </div>
