feat: add all table styles

--- a/src/index.html
+++ b/src/index.html
@@ -104,18 +104,18 @@
             <h3 class="report__header">Calibration report</h3>
             <table class="report__table">
                 <tr>
-                    <th class="report__th">Data</th>
-                    <th class="report__th">Used buffer solutions</th>
-                    <th class="report__th">Slope, %<br>Norm 95-105</th>
-                    <th class="report__th">Offset, mV<br>Norm ±(0-20)</th>
-                    <th class="report__th">User</th>
+                    <th class="report__th report__th_date">Data</th>
+                    <th class="report__th report__th_buff">Used buffer solutions</th>
+                    <th class="report__th report__th_slope">Slope, %<br>Norm 95-105</th>
+                    <th class="report__th report__th_offset">Offset, mV<br>Norm ±(0-20)</th>
+                    <th class="report__th report__th_user">User</th>
                 </tr>
                 <tr>
-                    <td class="report__td">
+                    <td class="report__td report__td_data">
                         <div class="report__date">04.10.19</div>
                         <div class="report__time">10:23</div>
                         </td>
-                    <td class="report__td">
+                    <td class="report__td report__td_buff">
                         В1: № 2000460789536: pH 1.09
                         <br>
                         В2: № 2000460789536: pH 2.00
@@ -126,24 +126,22 @@
                         <br>
                         В5: № 2000460789536: pH 9.21
                     </th>
-                    <td class="report__td">
-                        98.7
-                        <div class="report__icon_ok"></div>
+                    <td class="report__td report__td_slope">
+                        <span class="report__num">98.7</span>
                     </td>
                     <td class="report__td">
-                        -0.3
-                        <div class="report__icon_ok"></div>
+                        <span class="report__num">-0.3</span>                        
                     </td>       
-                    <td class="report__td">
+                    <td class="report__td report__td_user">
                         Иванов Генадий Петрович
                     </td>
                 </tr>
                 <tr>
-                    <td class="report__td">
+                    <td class="report__td report__td_data">
                         <div class="report__date">04.10.19</div>
                         <div class="report__time">10:23</div>
                         </td>
-                    <td class="report__td">
+                    <td class="report__td report__td_buff">
                         В1: № 2000460789536: pH 1.09
                         <br>
                         В2: № 2000460789536: pH 2.00
@@ -155,23 +153,21 @@
                         В5: № 2000460789536: pH 9.21
                     </th>
                     <td class="report__td">
-                        98.7
-                        <div class="report__icon_ok"></div>
+                        <span class="report__num">98.7</span>
                     </td>
                     <td class="report__td">
-                        -0.3
-                        <div class="report__icon_ok"></div>
+                        <span class="report__num">-0.3</span>  
                     </td>       
-                    <td class="report__td">
+                    <td class="report__td report__td_user">
                         Петров Иван Генадьевич
                     </td>
                 </tr>
                 <tr>
-                    <td class="report__td">
+                    <td class="report__td report__td_data">
                         <div class="report__date">04.10.19</div>
                         <div class="report__time">10:23</div>
                         </td>
-                    <td class="report__td">
+                    <td class="report__td report__td_buff">
                         В1: № 2000460789536: pH 1.09
                         <br>
                         В2: № 2000460789536: pH 2.00
@@ -183,23 +179,21 @@
                         В5: № 2000460789536: pH 9.21
                     </th>
                     <td class="report__td">
-                        98.7
-                        <div class="report__icon_ok"></div>
+                        <span class="report__num">98.7</span>                        
                     </td>
                     <td class="report__td">
-                        -0.3
-                        <div class="report__icon_ok"></div>
+                        <span class="report__num">-0.3</span>  
                     </td>       
-                    <td class="report__td">
+                    <td class="report__td report__td_user">
                         Петров Иван Генадьевич
                     </td>
                 </tr>
                 <tr>
-                    <td class="report__td">
+                    <td class="report__td report__td_data">
                         <div class="report__date">04.10.19</div>
                         <div class="report__time">10:23</div>
                         </td>
-                    <td class="report__td">
+                    <td class="report__td report_t_d_buff">
                         В1: № 2000460789536: pH 1.09
                         <br>
                         В2: № 2000460789536: pH 2.00
@@ -211,14 +205,12 @@
                         В5: № 2000460789536: pH 9.21
                     </th>
                     <td class="report__td">
-                        90.1
-                        <div class="report__icon_bad"></div>
+                        <span class="report__num report__num_bad">90.1</span>                        
                     </td>
                     <td class="report__td">
-                        -0.5
-                        <div class="report__icon_ok"></div>
+                        <span class="report__num">-0.5</span>  
                     </td>       
-                    <td class="report__td">
+                    <td class="report__td report__td_user">
                         Генадьев Иван Петрович
                     </td>
                 </tr>
