feat: change layout of report on smaller screen

--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
     <div class="grid__item">
         <form action="POST" class="search-form">
             <label for="search" class="search-form__label">Enter inventory number, guid or bims id</label>
-            <div class="search-form__item"><input type="text" class="search-form__textbox" id="search" name="search" placeholder="Type">
+            <div class="search-form__item"><input type="text" class="search-form__textbox" id="search" name="search">
                 <button class="search-form__btn">Search</button>
             </div>   
         </form>
@@ -114,11 +114,11 @@
                 </thead>
                 <tbody>
                     <tr class="report__trow">
-                        <td class="report__td report__td_data" data-label="Data">
+                        <td class="report__td report__td_data">
                             <div class="report__date">04.10.19</div>
                             <div class="report__time">10:23</div>
                         </td>
-                        <td class="report__td report__td_buff" data-label="Used buffer solutions">
+                        <td class="report__td report__td_buff">
                             В1: № 2000460789536: pH 1.09
                             <br>
                             В2: № 2000460789536: pH 2.00
@@ -129,13 +129,13 @@
                             <br>
                             В5: № 2000460789536: pH 9.21
                         </td>
-                        <td class="report__td report__td_slope" data-label="Slope,% Norm 95-105">
+                        <td class="report__td report__td_slope">
                             <span class="report__num">98.7</span>
                         </td>
-                        <td class="report__td" data-label="Offset,mV Norm ±(0-20)">
+                        <td class="report__td" >
                             <span class="report__num">-0.3</span>                        
                         </td>       
-                        <td class="report__td report__td_user" data-label="User">
+                        <td class="report__td report__td_user">
                             Иванов Генадий Петрович
                         </td>
                     </tr>
@@ -144,7 +144,7 @@
                             <div class="report__date">04.10.19</div>
                             <div class="report__time">10:23</div>
                             </td>
-                        <td class="report__td report__td_buff" data-label="Used buffer solutions">
+                        <td class="report__td report__td_buff">
                             В1: № 2000460789536: pH 1.09
                             <br>
                             В2: № 2000460789536: pH 2.00
@@ -155,22 +155,22 @@
                             <br>
                             В5: № 2000460789536: pH 9.21
                         </td>
-                        <td class="report__td" data-label="Slope,% Norm 95-105">
+                        <td class="report__td">
                             <span class="report__num">98.7</span>
                         </td>
-                        <td class="report__td" data-label="Offset,mV Norm ±(0-20)">
+                        <td class="report__td"">
                             <span class="report__num">-0.3</span>  
                         </td>       
-                        <td class="report__td report__td_user" data-label="User">
+                        <td class="report__td report__td_user">
                             Петров Иван Генадьевич
                         </td>
                     </tr>
                     <tr class="report__trow">
-                        <td class="report__td report__td_data"  data-label="Data">
+                        <td class="report__td report__td_data">
                             <div class="report__date">04.10.19</div>
                             <div class="report__time">10:23</div>
                             </td>
-                        <td class="report__td report__td_buff" data-label="Used buffer solutions">
+                        <td class="report__td report__td_buff">
                             В1: № 2000460789536: pH 1.09
                             <br>
                             В2: № 2000460789536: pH 2.00
@@ -181,22 +181,22 @@
                             <br>
                             В5: № 2000460789536: pH 9.21
                         </td>
-                        <td class="report__td" data-label="Slope,% Norm 95-105">
+                        <td class="report__td">
                             <span class="report__num">98.7</span>                        
                         </td>
-                        <td class="report__td" data-label="Offset,mV Norm ±(0-20)">
+                        <td class="report__td">
                             <span class="report__num">-0.3</span>  
                         </td>       
-                        <td class="report__td report__td_user" data-label="User">
+                        <td class="report__td report__td_user">
                             Петров Иван Генадьевич
                         </td>
                     </tr>
                     <tr class="report__trow">
-                        <td class="report__td report__td_data"  data-label="Data">
+                        <td class="report__td report__td_data">
                             <div class="report__date">04.10.19</div>
                             <div class="report__time">10:23</div>
                             </td>
-                        <td class="report__td report_t_d_buff" data-label="Used buffer solutions">
+                        <td class="report__td report_t_d_buff">
                             В1: № 2000460789536: pH 1.09
                             <br>
                             В2: № 2000460789536: pH 2.00
@@ -207,13 +207,13 @@
                             <br>
                             В5: № 2000460789536: pH 9.21
                         </td>
-                        <td class="report__td" data-label="Slope,% Norm 95-105">
+                        <td class="report__td">
                             <span class="report__num report__num_bad">90.1</span>                        
                         </td>
-                        <td class="report__td" data-label="Offset,mV Norm ±(0-20)">
+                        <td class="report__td">
                             <span class="report__num">-0.5</span>  
                         </td>       
-                        <td class="report__td report__td_user" data-label="User">
+                        <td class="report__td report__td_user">
                             Генадьев Иван Петрович
                         </td>
                     </tr>
