fix: classes in index.html

--- a/src/index.html
+++ b/src/index.html
@@ -40,7 +40,7 @@
                     <span class="device-info__content" id="model">AX-123</span></div>
                 <div class="device-info__item">
                     <span class="device-info__name">Ответственное подразделение (ремонт):</span>
-                    <span class="device-info__content" id="responsible-гтше">Группа обслуживания лабораторного оборудования</span></div>
+                    <span class="device-info__content" id="responsible-unit">Группа обслуживания лабораторного оборудования</span></div>
                 <div class="device-info__item">
                     <span class="device-info__name">Эксплуатирующее подразделение:</span>
                     <span class="device-info__content" id="operating-unit">Химико-аналитическая лаборатория 2.0</span>
@@ -132,7 +132,7 @@
                         <td class="report__td report__td_slope">
                             <span class="report__num">98.7</span>
                         </td>
-                        <td class="report__td" >
+                        <td class="report__td report__th_slope" >
                             <span class="report__num">-0.3</span>                        
                         </td>       
                         <td class="report__td report__td_user">
@@ -155,10 +155,10 @@
                             <br>
                             В5: № 2000460789536: pH 9.21
                         </td>
-                        <td class="report__td">
+                        <td class="report__td report__th_slope">
                             <span class="report__num">98.7</span>
                         </td>
-                        <td class="report__td"">
+                        <td class="report__td report__th_offset" >
                             <span class="report__num">-0.3</span>  
                         </td>       
                         <td class="report__td report__td_user">
@@ -181,10 +181,10 @@
                             <br>
                             В5: № 2000460789536: pH 9.21
                         </td>
-                        <td class="report__td">
+                        <td class="report__td report__th_slope">
                             <span class="report__num">98.7</span>                        
                         </td>
-                        <td class="report__td">
+                        <td class="report__td report__th_offset">
                             <span class="report__num">-0.3</span>  
                         </td>       
                         <td class="report__td report__td_user">
@@ -207,10 +207,10 @@
                             <br>
                             В5: № 2000460789536: pH 9.21
                         </td>
-                        <td class="report__td">
+                        <td class="report__td report__th_slope">
                             <span class="report__num report__num_bad">90.1</span>                        
                         </td>
-                        <td class="report__td">
+                        <td class="report__td report__th_offset">
                             <span class="report__num">-0.5</span>  
                         </td>       
                         <td class="report__td report__td_user">
